tdf#101042 Fix for frozen windows in Excel

Window protection is "not allowed to move and resize windows" in MS Excel,
it is definitely not Frozen Panes ( maData.mbFrozenPanes )

Change-Id: I04f0429738a6daecb26274f169c5118dba73e895
Reviewed-on: https://gerrit.libreoffice.org/30076
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>
(cherry picked from commit 0637d0f43d3dc5b41a1bbc5726d6a68b7c36a519)
Reviewed-on: https://gerrit.libreoffice.org/30777
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit a6114042c590ff319e7d1877935e56e6c77bc3ee)